--- a/manual/Speech-Output-Control.html
+++ b/manual/Speech-Output-Control.html
@@ -134,28 +134,18 @@
       <p>Toggle split caps mode. Split caps mode is useful when
       reading Hungarian notation in program source code.
       Interactive PREFIX arg means toggle the global default value,
-      and then set the current local value to the
-      result.</p><span id=
-      "index-dtk_002dtoggle_002dcapitalization"></span> <span id=
-      "index-C_002de-d-c"></span>
+      and then set the current local value to the result.
+      <code>dtk-toggle-caps</code></p>
     </dd>
     <dt><kbd>C-e d c</kbd></dt>
     <dd>
-      <p><code>dtk-toggle-capitalization</code></p>
+      <span id="index-C_002de-d-c"></span> <span id=
+      "index-dtk_002dtoggle_002dcaps"></span>
       <p>Toggle capitalization. when set, capitalization is
-      indicated by a <em>cap</em> before the word. Interactive
-      PREFIX arg means toggle the global default value, and then
-      set the current local value to the result.</p><span id=
-      "index-dtk_002dtoggle_002dallcaps"></span> <span id=
-      "index-C_002de-d-cap-C"></span>
-    </dd>
-    <dt><kbd>C-e d cap C</kbd></dt>
-    <dd>
-      <p><code>dtk-toggle-allcaps</code></p>
-      <p>Toggle allcaps. When set, allcaps words are indicated by a
-      short <em>ac</em>. Interactive PREFIX arg means toggle the
-      global default value, and then set the current local value to
-      the result. Note that</p>
+      indicated by a <em>cap</em> before the word, and upper-case
+      words are indicated with a <em>acc</em> before the word.
+      Interactive PREFIX arg means toggle the global default value,
+      and then set the current local value to the result.</p>
     </dd>
   </dl>
   <p>In addition, Emacspeak can convey the indentation of lines as
