--- a/manual/emacspeak_002dspeak.html
+++ b/manual/emacspeak_002dspeak.html
@@ -624,11 +624,10 @@ voice annotated first,  see command ‘emacspeak-speak-voice-annotate-paragraphs
       <div class="format">
         <pre class=
         "format">Speak name of file being visited in current buffer.
-Speak default directory if invoked in a dired buffer,
-or when the buffer is not visiting any file.
-Interactive prefix arg ‘filename’ speaks only the final path
-component.
-The result is put in the kill ring for convenience.
+Speak default directory if invoked in a dired buffer, or when the
+buffer is not visiting any file.  Interactive prefix arg
+‘filename’ speaks only the final path component.  The result is
+put in the kill ring for convenience.
 
 (fn &amp;optional FILENAME)
 </pre>
@@ -1149,7 +1148,7 @@ the sense of the filter.
         <pre class=
         "format">Speak the last message from Emacs once again.
 The message is also placed in the kill ring for convenient yanking
-if ‘emacspeak-speak-message-again-should-copy-to-kill-ring’ is set.
+if ‘emacspeak-speak-message-again-copy-as-kill’ is set.
 
 (fn &amp;optional FROM-MESSAGE-CACHE)
 </pre>
@@ -1262,7 +1261,8 @@ Negative prefix arg speaks from start of buffer to point.
       "index-emacspeak_002dspeak_002dminor_002dmode_002dline-2"></span>
       <div class="format">
         <pre class="format">Speak the minor mode-information.
-Optional  interactive prefix arg ‘log-msg’ logs spoken info to *Messages*.
+Optional interactive prefix arg ‘log-msg’ logs spoken info to
+*Messages*.
 
 (fn &amp;optional LOG-MSG)
 </pre>
@@ -2532,7 +2532,7 @@ Prompts for PERSONALITY  with completion when called interactively.
   </dl><span id="emacspeak_002dspeak-Options"></span>
   <h4 class="subsection">12.173.2 emacspeak-speak Options</h4>
   <dl>
-    <dt id="index-User-Option-726">Variable: <strong>User
+    <dt id="index-User-Option-728">Variable: <strong>User
     Option</strong> <em>emacspeak-audio-indentation</em></dt>
     <dd>
       <p>Option indicating if line indentation is cued. If non-nil
@@ -2542,7 +2542,7 @@ Prompts for PERSONALITY  with completion when called interactively.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-727">Variable: <strong>User
+    <dt id="index-User-Option-729">Variable: <strong>User
     Option</strong>
     <em>emacspeak-audio-indentation-method</em></dt>
     <dd>
@@ -2553,7 +2553,7 @@ Prompts for PERSONALITY  with completion when called interactively.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-728">Variable: <strong>User
+    <dt id="index-User-Option-730">Variable: <strong>User
     Option</strong> <em>emacspeak-character-echo</em></dt>
     <dd>
       <p>If t, then emacspeak echoes characters as you type. You
@@ -2561,7 +2561,7 @@ Prompts for PERSONALITY  with completion when called interactively.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-729">Variable: <strong>User
+    <dt id="index-User-Option-731">Variable: <strong>User
     Option</strong> <em>emacspeak-line-echo</em></dt>
     <dd>
       <p>If t, then emacspeak echoes lines as you type. You can use
@@ -2569,7 +2569,7 @@ Prompts for PERSONALITY  with completion when called interactively.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-730">Variable: <strong>User
+    <dt id="index-User-Option-732">Variable: <strong>User
     Option</strong> <em>emacspeak-mail-alert</em></dt>
     <dd>
       <p>Option to indicate cueing of new mail. If t, emacspeak
@@ -2583,7 +2583,7 @@ Prompts for PERSONALITY  with completion when called interactively.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-731">Variable: <strong>User
+    <dt id="index-User-Option-733">Variable: <strong>User
     Option</strong> <em>emacspeak-mail-alert-interval</em></dt>
     <dd>
       <p>Interval in seconds between mail alerts for the same
@@ -2591,7 +2591,7 @@ Prompts for PERSONALITY  with completion when called interactively.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-732">Variable: <strong>User
+    <dt id="index-User-Option-734">Variable: <strong>User
     Option</strong> <em>emacspeak-mail-spool-file</em></dt>
     <dd>
       <p>Mail spool file examined to alert you about newly arrived
@@ -2599,14 +2599,14 @@ Prompts for PERSONALITY  with completion when called interactively.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-733">Variable: <strong>User
+    <dt id="index-User-Option-735">Variable: <strong>User
     Option</strong> <em>emacspeak-silence-hook</em></dt>
     <dd>
       <p>Functions run after emacspeak-silence is called.</p>
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-734">Variable: <strong>User
+    <dt id="index-User-Option-736">Variable: <strong>User
     Option</strong>
     <em>emacspeak-speak-default-os-coding-system</em></dt>
     <dd>
@@ -2614,7 +2614,7 @@ Prompts for PERSONALITY  with completion when called interactively.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-735">Variable: <strong>User
+    <dt id="index-User-Option-737">Variable: <strong>User
     Option</strong>
     <em>emacspeak-speak-filter-persistent-store</em></dt>
     <dd>
@@ -2622,7 +2622,7 @@ Prompts for PERSONALITY  with completion when called interactively.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-736">Variable: <strong>User
+    <dt id="index-User-Option-738">Variable: <strong>User
     Option</strong>
     <em>emacspeak-speak-line-column-filter</em></dt>
     <dd>
@@ -2633,7 +2633,7 @@ Prompts for PERSONALITY  with completion when called interactively.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-737">Variable: <strong>User
+    <dt id="index-User-Option-739">Variable: <strong>User
     Option</strong>
     <em>emacspeak-speak-maximum-line-length</em></dt>
     <dd>
@@ -2645,7 +2645,7 @@ Prompts for PERSONALITY  with completion when called interactively.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-738">Variable: <strong>User
+    <dt id="index-User-Option-740">Variable: <strong>User
     Option</strong> <em>emacspeak-speak-messages</em></dt>
     <dd>
       <p>Option indicating if messages are spoken. If nil,
@@ -2655,7 +2655,7 @@ Prompts for PERSONALITY  with completion when called interactively.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-739">Variable: <strong>User
+    <dt id="index-User-Option-741">Variable: <strong>User
     Option</strong>
     <em>emacspeak-speak-time-format-string</em></dt>
     <dd>
@@ -2665,7 +2665,7 @@ Prompts for PERSONALITY  with completion when called interactively.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-740">Variable: <strong>User
+    <dt id="index-User-Option-742">Variable: <strong>User
     Option</strong>
     <em>emacspeak-speak-zoneinfo-directory</em></dt>
     <dd>
@@ -2673,7 +2673,7 @@ Prompts for PERSONALITY  with completion when called interactively.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-741">Variable: <strong>User
+    <dt id="index-User-Option-743">Variable: <strong>User
     Option</strong> <em>emacspeak-use-header-line</em></dt>
     <dd>
       <p>Use default header line defined by Emacspeak for buffers
@@ -2681,7 +2681,7 @@ Prompts for PERSONALITY  with completion when called interactively.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-742">Variable: <strong>User
+    <dt id="index-User-Option-744">Variable: <strong>User
     Option</strong> <em>emacspeak-voicemail-spool-file</em></dt>
     <dd>
       <p>Mail spool file examined to alert you about newly arrived
@@ -2689,7 +2689,7 @@ Prompts for PERSONALITY  with completion when called interactively.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-743">Variable: <strong>User
+    <dt id="index-User-Option-745">Variable: <strong>User
     Option</strong> <em>emacspeak-word-echo</em></dt>
     <dd>
       <p>If t, then emacspeak echoes words as you type. You can use
