--- a/manual/index.html
+++ b/manual/index.html
@@ -53,7 +53,7 @@
   <h1 class="settitle c2">Emacspeak User’s Manual — 2nd
   Edition.</h1>
   <p>This manual documents <strong>Emacspeak, The Complete Audio
-  Desktop</strong> and was last updated on November 25,
+  Desktop</strong> and was last updated on November 28,
   2020.</p><span id="SEC_Overview"></span>
   <h2 class="shortcontents-heading">Short Table of Contents</h2>
   <div class="shortcontents">
@@ -648,26 +648,20 @@
                   <li><a id="toc-dtk_002dstop" href=
                   "dtk_002dspeak.html#dtk_002dstop" name=
                   "toc-dtk_002dstop">12.7.1.21 dtk-stop</a></li>
-                  <li><a id="toc-dtk_002dtoggle_002dallcaps" href=
-                  "dtk_002dspeak.html#dtk_002dtoggle_002dallcaps"
-                  name="toc-dtk_002dtoggle_002dallcaps">12.7.1.22
-                  dtk-toggle-allcaps</a></li>
-                  <li><a id="toc-dtk_002dtoggle_002dcapitalization"
-                  href=
-                  "dtk_002dspeak.html#dtk_002dtoggle_002dcapitalization"
-                  name=
-                  "toc-dtk_002dtoggle_002dcapitalization">12.7.1.23
-                  dtk-toggle-capitalization</a></li>
+                  <li><a id="toc-dtk_002dtoggle_002dcaps" href=
+                  "dtk_002dspeak.html#dtk_002dtoggle_002dcaps"
+                  name="toc-dtk_002dtoggle_002dcaps">12.7.1.22
+                  dtk-toggle-caps</a></li>
                   <li><a id=
                   "toc-dtk_002dtoggle_002dpunctuation_002dmode"
                   href=
                   "dtk_002dspeak.html#dtk_002dtoggle_002dpunctuation_002dmode"
                   name=
-                  "toc-dtk_002dtoggle_002dpunctuation_002dmode">12.7.1.24
+                  "toc-dtk_002dtoggle_002dpunctuation_002dmode">12.7.1.23
                   dtk-toggle-punctuation-mode</a></li>
                   <li><a id="toc-dtk_002dtoggle_002dquiet" href=
                   "dtk_002dspeak.html#dtk_002dtoggle_002dquiet"
-                  name="toc-dtk_002dtoggle_002dquiet">12.7.1.25
+                  name="toc-dtk_002dtoggle_002dquiet">12.7.1.24
                   dtk-toggle-quiet</a></li>
                   <li><a id=
                   "toc-dtk_002dtoggle_002dspeak_002dnonprinting_002dchars"
@@ -675,13 +669,13 @@
                   "dtk_002dspeak.html#dtk_002dtoggle_002dspeak_002dnonprinting_002dchars"
                   name=
                   "toc-dtk_002dtoggle_002dspeak_002dnonprinting_002dchars">
-                  12.7.1.26
+                  12.7.1.25
                   dtk-toggle-speak-nonprinting-chars</a></li>
                   <li><a id="toc-dtk_002dtoggle_002dsplit_002dcaps"
                   href=
                   "dtk_002dspeak.html#dtk_002dtoggle_002dsplit_002dcaps"
                   name=
-                  "toc-dtk_002dtoggle_002dsplit_002dcaps">12.7.1.27
+                  "toc-dtk_002dtoggle_002dsplit_002dcaps">12.7.1.26
                   dtk-toggle-split-caps</a></li>
                   <li><a id=
                   "toc-dtk_002dtoggle_002dsplitting_002don_002dwhite_002dspace"
@@ -689,21 +683,21 @@
                   "dtk_002dspeak.html#dtk_002dtoggle_002dsplitting_002don_002dwhite_002dspace"
                   name=
                   "toc-dtk_002dtoggle_002dsplitting_002don_002dwhite_002dspace">
-                  12.7.1.28
+                  12.7.1.27
                   dtk-toggle-splitting-on-white-space</a></li>
                   <li><a id=
                   "toc-dtk_002dtoggle_002dstrip_002doctals" href=
                   "dtk_002dspeak.html#dtk_002dtoggle_002dstrip_002doctals"
                   name=
-                  "toc-dtk_002dtoggle_002dstrip_002doctals">12.7.1.29
+                  "toc-dtk_002dtoggle_002dstrip_002doctals">12.7.1.28
                   dtk-toggle-strip-octals</a></li>
                   <li><a id="toc-tts_002drestart" href=
                   "dtk_002dspeak.html#tts_002drestart" name=
-                  "toc-tts_002drestart">12.7.1.30
+                  "toc-tts_002drestart">12.7.1.29
                   tts-restart</a></li>
                   <li><a id="toc-tts_002dspeak_002dversion" href=
                   "dtk_002dspeak.html#tts_002dspeak_002dversion"
-                  name="toc-tts_002dspeak_002dversion">12.7.1.31
+                  name="toc-tts_002dspeak_002dversion">12.7.1.30
                   tts-speak-version</a></li>
                 </ul>
               </li>
