--- a/manual/emacspeak_002dadvice.html
+++ b/manual/emacspeak_002dadvice.html
@@ -97,21 +97,28 @@
   </dl><span id="emacspeak_002dadvice-Options"></span>
   <h4 class="subsection">12.14.2 emacspeak-advice Options</h4>
   <dl>
-    <dt id="index-User-Option-75">Variable: <strong>User
+    <dt id="index-User-Option-77">Variable: <strong>User
     Option</strong> <em>emacspeak-speak-errors</em></dt>
     <dd>
       <p>Specifies if error messages are cued.</p>
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-76">Variable: <strong>User
+    <dt id="index-User-Option-78">Variable: <strong>User
+    Option</strong> <em>emacspeak-speak-messages-filter</em></dt>
+    <dd>
+      <p>List of strings used to filter spoken messages.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-79">Variable: <strong>User
     Option</strong> <em>emacspeak-speak-tooltips</em></dt>
     <dd>
       <p>Enable to get tooltips spoken.</p>
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-77">Variable: <strong>User
+    <dt id="index-User-Option-80">Variable: <strong>User
     Option</strong> <em>voice-completions-annotations</em></dt>
     <dd>
       <p>Personality used for completions-annotations This
@@ -120,7 +127,7 @@
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-78">Variable: <strong>User
+    <dt id="index-User-Option-81">Variable: <strong>User
     Option</strong> <em>voice-completions-common-part</em></dt>
     <dd>
       <p>Personality used for completions-common-part This
@@ -129,7 +136,7 @@
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-79">Variable: <strong>User
+    <dt id="index-User-Option-82">Variable: <strong>User
     Option</strong>
     <em>voice-completions-first-difference</em></dt>
     <dd>
@@ -139,7 +146,7 @@
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-80">Variable: <strong>User
+    <dt id="index-User-Option-83">Variable: <strong>User
     Option</strong>
     <em>voice-eldoc-highlight-function-argument</em></dt>
     <dd>
@@ -149,7 +156,7 @@
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-81">Variable: <strong>User
+    <dt id="index-User-Option-84">Variable: <strong>User
     Option</strong> <em>voice-log-edit-header</em></dt>
     <dd>
       <p>Personality used for log-edit-header This personality uses
@@ -158,7 +165,7 @@
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-82">Variable: <strong>User
+    <dt id="index-User-Option-85">Variable: <strong>User
     Option</strong> <em>voice-log-edit-summary</em></dt>
     <dd>
       <p>Personality used for log-edit-summary This personality
@@ -167,7 +174,7 @@
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-83">Variable: <strong>User
+    <dt id="index-User-Option-86">Variable: <strong>User
     Option</strong> <em>voice-log-edit-unknown-header</em></dt>
     <dd>
       <p>Personality used for log-edit-unknown-header This
@@ -176,7 +183,7 @@
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-84">Variable: <strong>User
+    <dt id="index-User-Option-87">Variable: <strong>User
     Option</strong> <em>voice-minibuffer-prompt</em></dt>
     <dd>
       <p>Personality used for minibuffer-prompt This personality
